<resources>
    <string name="app_name">Mail</string>

    <string name="action_settings">Settings</string>

    <string name="login_email">Address</string>
    <string name="login_password">Password</string>
    <string name="login_login">Log in</string>
    <string name="login_email_invalid">This email address is invalid</string>

    <string name="extra_config_required">Additional configuration is required:</string>
    <string name="imap_address">IMAP host</string>
    <string name="imap_port">IMAP port</string>
    <string name="smtp_address">SMTP host</string>
    <string name="smtp_port">SMTP port (SSL)</string>
    <string name="login_fail">Failed to log in. Check your password and configuration settings.</string>

    <string name="compose">Compose…</string>
    <string name="select_recipient">Select recipient</string>
    <string name="encryption_available">Private messaging is available for %s!</string>
    <string name="button_write">Write message</string>
    <string name="button_write_encrypted">Write private message</string>

    <string name="subject">Subject</string>
    <string name="body_template">Write some text here…</string>
    <string name="from">From: %s</string>
    <string name="to">To: %s</string>
    <string name="send">Send</string>
    <string name="cannot_display_message">Unable to display message type</string>
    <string name="unknown_msg_type">Unable to display message type: %s</string>
    <string name="invalid_encrypt">Unable to message: invalid encryption scheme</string>
    <string name="unknown_encrypt">Unable to message: unknown encryption protocol</string>
    <string name="wrong_encrypt">Unable to message: wrong private key</string>
    <string name="autocrypt_setup_subject">Autocrypt Setup Message</string>
    <string name="autocrypt_setup">This message contains all information to transfer your Autocrypt\nsettings along with your secret key securely to another device.\n\nTo set up your new device for Autocrypt, please follow the\ninstructions that should be presented by your new device.</string>
    <string name="autocrypt_setup_attachment">This is the Autocrypt setup file used to transfer settings and
keys between clients. You can decrypt it using the Setup Code
presented on your old device, and then import the contained key
into your keyring.</string>

    <string name="autocrypt_setup_dialog_title">Encryption backup key</string>
    <string name="autocrypt_setup_dialog">Please write down the following passphrase: \n%s\nThis will be used to transfer encrypted messages from your current device to other Autocrypt devices.</string>

    <string name="nav_drawer_close">Close navigation drawer</string>
    <string name="nav_drawer_open">Open navigation drawer</string>

    <string name="autocrypt_prompt_passphrase_title">Autocrypt setup</string>
    <string name="autocrypt_prompt_passphrase">Looks like a mail application has setup encryption for this e-mail account. Enter the Autocrypt passphrase below to access encrypted messages.</string>
    <string name="autocrypt_prompt_passphrase_error">Setup error. Check your password.</string>
</resources>